--- a/wiki/web/templates/page.html
+++ b/wiki/web/templates/page.html
@@ -34,5 +34,6 @@
 	<li><a href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a></li>
   <li><a href="{{ url_for('wiki.move', url=page.url) }}">Move</a></li>
   <li><a href="#confirmDelete" data-toggle="modal" class="text-error">Delete</a></li>
+<li><a href="{{ url_for('wiki.export', url=page.url) }}">Export</a></li>
 </ul>
 {% endblock sidebar %}
