Save page as template feature --DONE--

--- a/wiki/web/templates/page.html
+++ b/wiki/web/templates/page.html
@@ -33,6 +33,7 @@
 <ul class="nav nav-tabs nav-stacked">
 	<li><a href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a></li>
   <li><a href="{{ url_for('wiki.move', url=page.url) }}">Move</a></li>
+  <li><a href="{{ url_for('wiki.saveas', url=page.url) }}">Use as Template</a></li>
   <li><a href="#confirmDelete" data-toggle="modal" class="text-error">Delete</a></li>
 </ul>
 {% endblock sidebar %}
