Bugged Export, WIP Upload

--- a/wiki/web/templates/login.html
+++ b/wiki/web/templates/login.html
@@ -7,6 +7,6 @@
 	{{ form.hidden_tag() }}
 	{{ form.name(placeholder='Username') }}
 	{{ form.password(placeholder='Password') }}
-	<input type="submit" class="btn btn-primary" value="Login">
+	<input type="submit" class="btn btn-primary" id="loginbtn" value="Login">
 </form>
 {% endblock content %}
