--- a/wiki/web/templates/base.html
+++ b/wiki/web/templates/base.html
@@ -22,6 +22,8 @@
 								<li class="divider-vertical"></li>
 								<li><a href="{{ url_for('wiki.create') }}">New Page</a></li>
 								<li class="divider-vertical"></li>
+                                <li><a href="{{ url_for('wiki.upload') }}">Upload Page</a></li>
+                                <li class="divider-vertical"></li>
 								<li></li>
 							</ul>
 
