Ryan's commit pt 2

--- a/wiki/web/templates/base.html
+++ b/wiki/web/templates/base.html
@@ -22,7 +22,7 @@
 								<li class="divider-vertical"></li>
 								<li><a href="{{ url_for('wiki.create') }}">New Page</a></li>
 								<li class="divider-vertical"></li>
-								<li><a href="{{ url_for('wiki.profile', user_id=current_user.get_id()) }}">Profile</a></li>
+								<li><a href="{{ url_for('wiki.profile', user_id=current_user.get_id()) }}">{{ current_user.get_id() }}'s Profile</a></li>
 								<li class="divider-vertical"></li>
 								<li></li>
 							</ul>
