--- a/wiki/web/templates/page.html
+++ b/wiki/web/templates/page.html
@@ -1,24 +1,5 @@
 {% extends "base.html" %}
 
-<head>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
-</head>
-
-<script>function getPDF(){
-    var doc = new jsPDF();
-
-    var specialElementHandlers = {
-        '#getPDF': function (element, renderer) {
-            return true;
-        }
-    };
-
-    doc.fromHTML($('#htmldiv')[0], 20, 20, {'width':500,  'elementHandlers': specialElementHandlers});
-    doc.save('TeamKiwi.pdf');}
- </script>
-
 <div id="htmldiv">
 
 
@@ -61,7 +42,7 @@
 	<li><a href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a></li>
   <li><a href="{{ url_for('wiki.move', url=page.url) }}">Move</a></li>
   <li><a href="{{ url_for('wiki.saveas', url=page.url) }}">Use as Template</a></li>
-  <li><a href="javascript:getPDF()">Save as PDF</a></li>
+  <li><a href="#" onclick="getPDF();return false;">Save as PDF</a></li>
     <li><a href="{{ url_for('wiki.get_md', url=page.url) }}">Save as Markdown</a></li>
   <li><a href="#confirmDelete" data-toggle="modal" class="text-error">Delete</a></li>
 
