--- a/wiki/web/templates/page.html
+++ b/wiki/web/templates/page.html
@@ -1,10 +1,96 @@
-{% extends "base.html" %}
+{% from "helpers.html" import input %}
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='responsive.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='pygments.css') }}">
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
+		<script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+	</head>
 
-{% block title %}
-	{{ page.title }}
-{% endblock title %}
+    <script>
+			function getPDF(){
+				var doc = new jsPDF();
+				console.log("test");
+				var specialElementHandlers = {
+					'#getPDF': function (element, renderer) {
+						return true;
+					}
+				};
 
-{% block content %}
+				doc.fromHTML($('#htmldiv')[0], 20, 20, {'elementHandlers': specialElementHandlers});
+				doc.save('TeamKiwi.pdf');
+   			}
+ 		</script>
+<div id="htmldiv">
+	<body>
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<div class="row">
+						<div class="span12">
+							<a href="#" class="brand">{{ config.TITLE }}</a>
+							<ul class="nav">
+								<li><a href="{{ url_for('wiki.home') }}">Home</a></li>
+								<li><a href="{{ url_for('wiki.index') }}">Index</a></li>
+								<li><a href="{{ url_for('wiki.tags') }}">Tags</a></li>
+								<li><a href="{{ url_for('wiki.search') }}">Search</a></li>
+								<li class="divider-vertical"></li>
+								<li><a href="{{ url_for('wiki.create') }}">New Page</a></li>
+								<li class="divider-vertical"></li>
+								<li><a href="{{ url_for('wiki.upload') }}">Upload Page</a></li>
+
+								<li></li>
+							</ul>
+
+							<ul class="nav pull-right">
+								{% if not current_user.get_id() %}
+									<li><a href="{{ url_for('wiki.user_login') }}">Login</a></li>
+                                    <li><a href="{{ url_for('wiki.user_create') }}">Register</a></li>
+								{% else %}
+									<li class="divider-vertical"></li>
+									{% if current_user.get_id() %}
+										<li><a href="{{ url_for('wiki.profile', user_id=current_user.get_id()) }}">{{ current_user.get_id() }}'s Profile</a></li>
+									{% endif %}
+                                <li class="divider-vertical"></li>
+									<li><a href="{{ url_for('wiki.user_logout') }}">Logout</a></li>
+								{% endif %}
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="span10 offset1">
+					{% block header %}
+						<div class="page-header">
+                        <h1>{% block title %}{{ page.title }}{% endblock title %}</h1>
+						</div>
+					{% endblock header %}
+				</div>
+			</div>
+			<div class="row">
+				<div class="span7 offset1">
+					{% with messages = get_flashed_messages(with_categories=True) %}
+						{% if messages %}
+							{% for category, message in messages %}
+								<div class="alert alert-{{ category }}">
+									<button type="button" class="close" data-dismiss="alert">&times;</button>
+									{{ message }}
+								</div>
+							{% endfor %}
+						{% endif %}
+					{% endwith %}
+					{% if form and form.errors %}
+						<div class="alert alert-error">Errors occured verifying your input. Please check the marked fields below.</div>
+					{% endif %}
+
+					{% block content %}
   <div id="confirmDelete" class="modal hide fade" aria-hidden="true">
     <div class="modal-header">
       <h3>Are you sure?</h3>
@@ -19,8 +105,9 @@
   </div>
 	{{ page }}
 {% endblock content %}
-
-{% block sidebar %}
+				</div>
+				<div class="span3">
+					{% block sidebar %}
 {% if page.tags %}
 <h3>Tags</h3>
   <ul>
@@ -34,7 +121,29 @@
 	<li><a href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a></li>
   <li><a href="{{ url_for('wiki.move', url=page.url) }}">Move</a></li>
   <li><a href="{{ url_for('wiki.saveas', url=page.url) }}">Use as Template</a></li>
+  <li><a href="javascript:getPDF()">Save as PDF</a></li>
+    <li><a href="{{ url_for('wiki.export', url=page.url) }}">Save as Markdown</a></li>
   <li><a href="#confirmDelete" data-toggle="modal" class="text-error">Delete</a></li>
-<li><a href="{{ url_for('wiki.export', url=page.url) }}">Export</a></li>
+
 </ul>
 {% endblock sidebar %}
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js "></script>
+		<script type="text/javascript">
+			if (typeof jQuery == 'undefined') {
+				document.write(unescape("%3Cscript src='{{ url_for('static', filename='jquery.min.js') }}' type='text/javascript'%3E%3C/script%3E"));
+			}
+		</script>
+		<script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+		<script type="text/javascript">
+			{% block postscripts %}
+			{% endblock postscripts %}
+		</script>
+	</body>
+</div>
+</html>
+
+
+
